--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ display: block;
 }
 
 .blog-main {
-    width: 800px;
+    max-width: 800px;
+    padding: 20px;
     margin-left: auto;
     margin-right: auto;
 }
