Update styles.css to adjust padding and height for site-main and fullwidthbanner-container classes

--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,11 @@ display: block;
 .display-block {
     display: block !important;
 }
+
+.site-main {
+    padding: 0px !important;
+}
+
+.fullwidthbanner-container {
+    height: 350px !important;
+}
