--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,9 @@ z-index: 1;
 
 .menu-item-dropdown-content a {
 color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+padding: 12px 16px !important;
+text-decoration: none !important;
+display: block !important;
 }
 
 .menu-item-dropdown-content a:hover {background-color: #f1f1f1}
