--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ background-color: #f9f9f9;
 min-width: 160px;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 z-index: 1;
+max-height: calc(100vh - 200px);
+overflow-y: auto;
 }
 
 .menu-item-dropdown-content a {
@@ -12,6 +14,12 @@ color: black;
 padding: 12px 16px !important;
 text-decoration: none !important;
 display: block !important;
+}
+
+@media screen and (max-width: 1200px) {
+    .menu-item-dropdown-content {
+        max-height: unset;
+    }
 }
 
 .menu-item-dropdown-content a:hover {background-color: #f1f1f1}
