--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,31 @@ display: block !important;
     height: calc(100vh - 200px);
     min-height: 400px;
 }
+
+.ul-inline-block ul {
+    display: inline-block;
+}
+
+@media screen and (max-width: 600px) {
+    .experience-mobile {
+        padding: 10px;
+        top: -170px;
+    }
+
+    .experience-mobile .tm-fid-inner > span {
+        font-size: 30px !important;
+    }
+
+    .experience-mobile .tm-fid-inner {
+        line-height: revert !important;
+    }
+
+    .experience-mobile .tm-fid-title > span {
+        font-size: 14px !important;
+        line-height: normal !important;
+    }
+
+    .experience-mobile .experience-sub {
+        top: -10px !important;
+    }
+}
